src/objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Article_Details__c</fullName>
        <label>Article Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Article Summary</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>L1_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Level 1 Approver 1</description>
        <label>L1 Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L1_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Level 1 Approver 2</description>
        <label>L1 Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L1_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Level 1 Approver 3</description>
        <label>L1 Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lightning_URL__c</fullName>
        <description>CSM-2106 - URL of knowledge record which is referenced in email templates.</description>
        <formula>$Label.LIGHTNING_URL &amp; Id &amp;&quot;/view&quot;</formula>
        <label>Lightning URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_in_Draft__c</fullName>
        <formula>IF( ISBLANK(FirstPublishedDate),  TODAY() - DATEVALUE(ArticleCreatedDate) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days in Draft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Keywords</fullName>
                </value>
                <value>
                    <fullName>Guidelines</fullName>
                </value>
                <value>
                    <fullName>Handbook</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Interim Work Procedures Manual</fullName>
                </value>
                <value>
                    <fullName>Procedures Manual</fullName>
                </value>
                <value>
                    <fullName>Transitory Procedures Manual</fullName>
                </value>
                <value>
                    <fullName>Work Instruction</fullName>
                </value>
                <value>
                    <fullName>Work Procedures Manual</fullName>
                </value>
                <value>
                    <fullName>Technical Guidelines</fullName>
                </value>
                <value>
                    <fullName>Other Public Documents</fullName>
                </value>
                <value>
                    <fullName>Business Process Design</fullName>
                </value>
                <value>
                    <fullName>Quality Manual</fullName>
                </value>
                <value>
                    <fullName>QRG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Article__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Article</label>
        <type>Checkbox</type>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>For_Approval_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Submit_Article__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>For Approval Articles</label>
    </listViews>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Content__c</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Content__c</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Content__c</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Guidelines_Procedures</fullName>
        <active>true</active>
        <label>Guidelines &amp; Procedures</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Documents</fullName>
        <active>true</active>
        <label>Other Documents</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quick_Reference_Guide</fullName>
        <active>true</active>
        <label>Quick Reference Guide</label>
    </recordTypes>
    <recordTypes>
        <fullName>Regulatory_Publications</fullName>
        <active>true</active>
        <label>Regulatory Publications</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Standards_Guidelines</fullName>
        <active>true</active>
        <label>Technical Standards &amp; Guidelines</label>
    </recordTypes>
    <recordTypes>
        <fullName>Work_Procedures_Manual</fullName>
        <active>true</active>
        <label>Work Procedures Manual</label>
    </recordTypes>
    <validationRules>
        <fullName>CXE_Require_Summary</fullName>
        <active>true</active>
        <description>Require Summary when submit article is checked</description>
        <errorConditionFormula>AND(
 LEN(Content__c) == 0,
 Submit_Article__c = TRUE )</errorConditionFormula>
        <errorMessage>Please input Article Summary</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Summary</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISBLANK( Content__c ),
ISPICKVAL(PRIORVALUE(PublishStatus), &quot;Draft&quot;),
ISCHANGED(PublishStatus)
)</errorConditionFormula>
        <errorMessage>Summary is required.</errorMessage>
    </validationRules>
</CustomObject>